<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">多维网络分析仪</string>
    <string name="str_back"><![CDATA[<< 返回]]></string>
    <string name="top_title">专业的网络测试工具包</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bot_menu1">网络工具</string>
    <string name="bot_menu2">空中鼠标</string>
    <string name="bot_menu3">远程控制</string>
    <string name="bot_menu4">  </string>
    <!--<string name="bot_menu2">虚拟鼠标</string>-->
    <!--<string name="bot_menu3">远程控制</string>-->
    <!--<string name="bot_menu4">个性设置</string>-->
    <string name="menu1">检查更新</string>
    <string name="menu2">版本说明</string>
    <string name="menu3">使用帮助</string>
    <string name="menu4">关于我们</string>

    <string name="images_list_title">本地历史文件</string>
    <string name="images_save_title">不保存！点击可直接查看历史记录</string>
    <string name="images_save_btn">保存到本地</string>


    <string name="gps_top">gsp_top</string>
    <string name="saved_station">saved_station</string>
    <string name="text_null">null</string>
    <string name="tip_sensor">点击选项可实时查看传感器感应数据</string>
    <string name="tip_analysis">历史记录</string>

    <string name="code_per">%</string>
    <string name="code_unknow">%</string>


    <string-array name="ping_results">
        <item>send</item>
        <item>receive</item>
        <item>percent</item>
        <item>max</item>
        <item>min</item>
        <item>average</item>
    </string-array>

    <string-array name="thread_count">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="send_count">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>

    <string name="about_qq">App Name ：MobileUtil</string>
    <string name="about_email">Type ：NetWork Analysis</string>
    <string name="about_author">Author ：Jimi</string>
    <string name="about_version">Version ：1.0.8</string>
    <string name="about_date">Online Date ：2017.3</string>
    <string name="mouse_use_help">长按此键后改变手机姿态可控制远端PC鼠标移动\n\n\n\n向上滑动可控制远端PC向上翻页\n\n\n\n向滑下动可控制远端PC向下翻页</string>

    <string-array name="version_detail">
        <item>
            增加手机互相远程控制功能
            紧急修复BUG
        </item>
        <item>
            app性能优化
        </item>
        <item>
            1：新增模拟空中重力感应鼠标功能\n
            2：新增将手机桌面投影至PC屏幕功能（目前仅支持局域网内使用）\n
            3：修复一些已知的BUG
        </item>
        <item>
            1：新增内网IP地址扫描功能\n
            2：修复wifi第一次扫描时波形图数据错误bug\n
            3：修复自动保存wifi信号强度历史图片时候数据错乱bug\n
            4：修复多次开启wifi模块内存溢出错误\n
            5：移除在功能模块底部的横幅广告，首页增加一次性移除广告按钮\n
        </item>
        <item>
            1：新增WIFI信号强度波动历史折线动态图\n
            2：新增WIFI信道占用比分析,可查看2.4G和5G所有国内支持信道\n
            3：新增WIFI信号强度波动历史折线图本地存储功能\n
            4：优化PING测试后，本地历史图片查看界面\n
            5：增加了后台用户统计功能\n
            6：调整了新版本更新方式，由百度助手更新调整为手机默认更新
        </item>
        <item>
            1：重新设计了首页布局页面，优化首页各个模块链接图标；\n
            2：放弃各模块帧布局滑动切换方式，每一个功能都是一个独立的activity，功能互不影响；\n
            3：增加了指南针功能模块；\n
            4：增加了蓝牙4.0信标扫描及场强变换的监测功能；\n
            5：增加了PING测试结束后生成结果折线图的功能，折线图由每个包的延时大小绘制而成，可直观反映每一次测试的网络质量；\n
            6：增加PING测试结果图片保存至本地功能，以及实现在APP内对这些图片的查看、删除相关功能；\n
        </item>
        <item>
            1：新增主要网络测试模块。其中包括PING测试、基站信号监测、手机传感器监测、WIFI信号监测、原生GPS数据监测。\n
            2：PING测试包括多线程快速测试和单线程普通测试两种模式。多线程模式可根据手机性能情况快速PING测大量数据包，返回测试总体情况。单线程普通测试
            则可0.5秒发送一个数据包，检测单个包PING测数据以及同时累计本次PING测得总体情况；\n
            3：基站侦测可实时监听手机信号的小区、场强、网咯模式等的变换情况，可用于无线网络信号的检测。
            若个别手机存在不兼容无法获取信息的情况，可反馈机型至作者以便做兼容适配；\n
            4：传感器模块可获取当前设备所支持的所有传感元器件列表。同时点击后还可查看传感器实时获取的数据；\n
            5：WIFI信号测试模块可扫描扫描当前可获取的WIFI信号、频点、信道等相关信息；\n
            6：GPS数据采集模块则是通过手机GPS模块获取当前的WGS84经纬度信息，经纬度信息通过度或者度分秒格式显示，显示方式由用户自行选择。另外还可实时的查看到GPS当前收到
            卫星颗数。\n
        </item>
    </string-array>
    <string-array name="version_num">
        <item>1.0.8 </item>
        <item>1.0.7.2 </item>
        <item>1.0.7 </item>
        <item>1.0.6 </item>
        <item>1.0.5 </item>
        <item>1.0.4 </item>
        <item>1.0.0</item>
    </string-array>
    <string-array name="version_date">
        <item>2017.01</item>
        <item>2016.11</item>
        <item>2016.10</item>
        <item>2016.10</item>
        <item>2016.9</item>
        <item>2016.8</item>

    </string-array>
    <string-array name="homepage_menu_title">
        <item>PING测试</item>
        <item>内网扫描</item>
        <item>WIFI分析</item>
        <!--<item>WIFI热点</item>-->
        <item>基站信息</item>
        <item>原生GPS</item>
        <item>蓝牙4.0</item>
        <item>手机传感器</item>
        <item>指南针</item>
    </string-array>

</resources>
