<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <include layout="@layout/toolbar_sub"></include>

    <TextView
        android:layout_marginTop="20dp"
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_qq"
        android:gravity="center_vertical"
        android:textAlignment="textStart"></TextView>
    <TextView
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_email"
        android:gravity="center_vertical"
        android:textAlignment="textStart"></TextView>
    <TextView
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_author"
        android:gravity="center_vertical"
        android:textAlignment="textStart"></TextView>
    <TextView
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_version"
        android:gravity="center_vertical"
        android:textAlignment="textStart"></TextView>
    <TextView
        android:paddingLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/about_date"
        android:gravity="center_vertical"
        android:textAlignment="textStart"></TextView>

    <RelativeLayout
        android:id="@+id/ad_container_360"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_above="@+id/homePage_nav" />
</LinearLayout>

