<!--<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/toolbar_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:minHeight="?attr/actionBarSize"-->
    <!--android:background="#DBEEF4"-->
    <!--app:popupTheme="@style/ToolbarPopupTheme">-->
<LinearLayout android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="#DBEEF4"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu1"
            style="@style/ToolbarTextSelectTheme"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu2"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu3"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu4"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>
    </LinearLayout>
<!--</android.support.v7.widget.Toolbar>-->