<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:minHeight="?attr/actionBarSize"
    android:background="@android:color/holo_blue_dark"
    app:popupTheme="@style/ToolbarPopupTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu1"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu2"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu3"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/bot_menu4"
            android:textAlignment="center"
            style="@style/ToolbarTextTheme"/>
    </LinearLayout>
</android.support.v7.widget.Toolbar>