<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/ad_banner"
    android:layout_alignParentStart="false">

</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:gravity="top|left|right"
        android:padding="0dp"
        android:id="@+id/main_container"
        android:layout_above="@+id/toolbar"
        android:layout_below="@+id/ad_banner">

    </RelativeLayout>
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="0dp"
        android:layout_alignParentRight="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark"
        android:titleTextColor="@android:color/primary_text_light"
        android:alpha="0.3"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:nestedScrollingEnabled="false"
        android:saveEnabled="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bot_menu1"
                android:id="@+id/textView"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/textView2"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:text="@string/bot_menu2"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bot_menu3"
                android:id="@+id/textView3"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bot_menu4"
                android:id="@+id/textView4"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textIsSelectable="true"
                android:clickable="true" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
</RelativeLayout>